--- a/index.html
+++ b/index.html
@@ -51,13 +51,18 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-danger my-2 my-sm-0 ml-sm-2" type="submit">כניסת/הרשמת מתקינים</button>
+                    <button class="btn btn-light my-2 my-sm-0 ml-sm-2" type="button">כניסת/הרשמת מתקינים</button>
 
                 </form>
             </div>
         </div>
     </nav>
-    <h1>Hello Shutters</h1>
+
+
+
+
+    
+    <h1>שלום בית-קל</h1>
 
 </body>
 
