--- a/index.html
+++ b/index.html
@@ -57,12 +57,91 @@
             </div>
         </div>
     </nav>
+    <main class="container">
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputEmail4">כתובת דוא"ל</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל'>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputPassword4">סיסמה</label>
+                    <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputPassword42">חזור על הסיסמה</label>
+                    <input type="password" class="form-control" id="inputPassword42" placeholder="סיסמה">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputFirstName">שם פרטי</label>
+                    <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
+                </div>
+                <div class="form-group col-md-6">
+                        <label for="inputLastName">שם משפחה</label>
+                        <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
+                    </div>
+                    <div class="form-group col-md-6">
+                            <label for="inputFirstName">טלפון נייד</label>
+                            <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
+                        </div>
+                
+            </div>
+            <div class="form-group">
+                <label for="inputAddress">כתובת</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר">
+            </div>
+            <div class="form-group">
+                <label for="inputAddress2">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity">עיר</label>
+                    <select id="inputCity" class="form-control">
+                        <option selected>בחר ...</option>
+                        <option>...</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-1">
+
+                </div>
+                <div class="form-group col-md-5">
+                    <label for="inputZip">מיקוד</label>
+                    <input type="text" class="form-control" id="inputZip">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-label" for="gridCheck">
+                        Check me out
+                    </label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
 
 
 
 
-    
-    <h1>שלום בית-קל</h1>
+
+
+
+
+
+    </main>
+
+
+
+
+
 
 </body>
 
