--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">דף הבית
+                        <a class="nav-link font-weight-bold" href="#">דף הבית
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">רשימת משווקים</a>
+                        <a class="nav-link font-weight-bold" href="#">רשימת משווקים</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item font-weight-bold">
                         <a class="nav-link" href="#">צור קשר</a>
                     </li>
                 </ul>
@@ -58,7 +58,7 @@
         </div>
     </nav>
     <main class="container">
-        <form>
+        <form class="mt-4">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">כתובת דוא"ל</label>
@@ -79,15 +79,15 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                     <label for="inputFirstName">שם פרטי</label>
                     <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-4">
                         <label for="inputLastName">שם משפחה</label>
                         <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                             <label for="inputFirstName">טלפון נייד</label>
                             <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
                         </div>
