--- a/index.html
+++ b/index.html
@@ -79,27 +79,31 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-3">
                     <label for="inputFirstName">שם פרטי</label>
                     <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
                 </div>
                 <div class="form-group col-md-4">
-                        <label for="inputLastName">שם משפחה</label>
-                        <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
-                    </div>
-                    <div class="form-group col-md-4">
-                            <label for="inputFirstName">טלפון נייד</label>
-                            <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
-                        </div>
-                
+                    <label for="inputLastName">שם משפחה</label>
+                    <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
+                </div>
+                <div class="form-group col-md-1">
+
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label for="inputPhoneNum">טלפון נייד</label>
+                    <input type="text" class="form-control" id="inputPhoneNum" placeholder=''>
+                </div>
+                <div class="form-group col-md-1">
+                    <label for="inputPhoneProvider">קידומת</label>
+                    <input type="text" class="form-control" id="inputPhoneProvider" placeholder=''>
+                </div>
+
             </div>
             <div class="form-group">
                 <label for="inputAddress">כתובת</label>
                 <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר">
-            </div>
-            <div class="form-group">
-                <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -117,15 +121,8 @@
                     <input type="text" class="form-control" id="inputZip">
                 </div>
             </div>
-            <div class="form-group">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Check me out
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            
+            <button type="submit" class="btn btn-primary">הרשמה</button>
         </form>
 
 
