--- a/index.html
+++ b/index.html
@@ -26,115 +26,105 @@
 
 <body ng-controller="nowTestCtrl" align>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-batkal">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG">
-            </a>
 
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link font-weight-bold" href="#">דף הבית
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link font-weight-bold" href="#">רשימת משווקים</a>
-                    </li>
-                    <li class="nav-item font-weight-bold">
-                        <a class="nav-link" href="#">צור קשר</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-light my-2 my-sm-0 ml-sm-2" type="button">כניסת/הרשמת מתקינים</button>
-
-                </form>
+    <div class="border border-info">
+        <div class="container pt-3">
+            <div class="page-header">
+                <h1 class="text-secondary">
+                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה אידיאלית</h1>
             </div>
         </div>
-    </nav>
-    <main class="container">
-        <form class="mt-4">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputEmail4">כתובת דוא"ל</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל'>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputPassword4">סיסמה</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
+    </div>
+    <div class="row">
+        <div class="col-2 bg-batkal">
+            <nav class="nav flex-column ">
+                <a class="nav-link active" href="#">דף הבית</a>
+                <a class="nav-link" href="#">רשימת משווקים</a>
+                <a class="nav-link" href="#">צור קשר</a>
+                
+                <button class="btn btn-light my-2 mx-auto" type="button">כניסת/הרשמת מתקינים</button>
 
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputPassword42">חזור על הסיסמה</label>
-                    <input type="password" class="form-control" id="inputPassword42" placeholder="סיסמה">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-3">
-                    <label for="inputFirstName">שם פרטי</label>
-                    <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
-                </div>
-                <div class="form-group col-md-4">
-                    <label for="inputLastName">שם משפחה</label>
-                    <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
-                </div>
-                <div class="form-group col-md-1">
 
+            </nav>
+        </div>
+        <main class="col-8">
+            <form class="mt-4">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">כתובת דוא"ל</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל'>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword4">סיסמה</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
+                    </div>
                 </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
 
-                <div class="form-group col-md-3">
-                    <label for="inputPhoneNum">טלפון נייד</label>
-                    <input type="text" class="form-control" id="inputPhoneNum" placeholder=''>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword42">חזור על הסיסמה</label>
+                        <input type="password" class="form-control" id="inputPassword42" placeholder="סיסמה">
+                    </div>
                 </div>
-                <div class="form-group col-md-1">
-                    <label for="inputPhoneProvider">קידומת</label>
-                    <input type="text" class="form-control" id="inputPhoneProvider" placeholder=''>
-                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <label for="inputFirstName">שם פרטי</label>
+                        <input type="text" class="form-control" id="inputFirstName" placeholder='שם'>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputLastName">שם משפחה</label>
+                        <input type="text" class="form-control" id="inputLastName" placeholder='משפחה'>
+                    </div>
+                    <div class="form-group col-md-1">
 
-            </div>
-            <div class="form-group">
-                <label for="inputAddress">כתובת</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר">
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputCity">עיר</label>
-                    <select id="inputCity" class="form-control">
-                        <option selected>בחר ...</option>
-                        <option>...</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-1">
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <label for="inputPhoneNum">טלפון נייד</label>
+                        <input type="text" class="form-control" id="inputPhoneNum" placeholder=''>
+                    </div>
+                    <div class="form-group col-md-1">
+                        <label for="inputPhoneProvider">קידומת</label>
+                        <input type="text" class="form-control" id="inputPhoneProvider" placeholder=''>
+                    </div>
 
                 </div>
-                <div class="form-group col-md-5">
-                    <label for="inputZip">מיקוד</label>
-                    <input type="text" class="form-control" id="inputZip">
+                <div class="form-group">
+                    <label for="inputAddress">כתובת</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="רחוב ומספר">
                 </div>
-            </div>
-            
-            <button type="submit" class="btn btn-primary">הרשמה</button>
-        </form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">עיר</label>
+                        <select id="inputCity" class="form-control">
+                            <option selected>בחר ...</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-1">
 
+                    </div>
+                    <div class="form-group col-md-5">
+                        <label for="inputZip">מיקוד</label>
+                        <input type="text" class="form-control" id="inputZip">
+                    </div>
+                </div>
 
-
-
-
-
-
-
-
-    </main>
-
+                <button type="submit" class="btn btn-primary">הרשמה</button>
+            </form>
+        </main>
+        <div class="col-2 bg-batkal-const">
+                <nav class="nav flex-column">
+                        <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
+                        <a class="nav-link" href="#">הזמנות</a>
+                        <a class="nav-link" href="#">עזרים ומחשבונים</a>
+                        <a class="nav-link disabled" href="#">פורום</a>
+                        <a class="nav-link disabled" href="#">FAQ</a>
+                     </nav>
+        </div>
+    </div>
 
 
 
