--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <script src="./app/shuttersApp.js"></script>
     <script src="./app/Test/nowTestCtrl.js"></script>
     <script src="./app/Test/nowTestSrv.js"></script>
+    <script src="./app/contructors/confCtrl.js"></script>
     <script src="./app/contructors/signUpDirective.js"></script>
+    <script src="./app/contructors/configuratorDirective.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="./app/style.css" />
 
 
@@ -32,7 +34,7 @@
         <div class="container pt-3">
             <div class="page-header">
                 <h1 class="text-secondary">
-                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה אידיאלית</h1>
+                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</h1>
             </div>
         </div>
     </div>
@@ -45,7 +47,7 @@
                 <button class="btn btn-light my-2 mx-auto" type="button">כניסת/הרשמת מתקינים</button>
             </nav>
         </div>
-        <div class="col-8 an-signup">
+        <div class="col-8" an-configure>
             
         </div>
         <div class="col-2 bg-batkal-const">
