--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 </head>
 
-<body ng-controller="nowTestCtrl" align>
+<body ng-controller="nowTestCtrl">
 
 
-    <div class="border border-info">
-        <div class="container pt-3">
+    <div class="border-bottom border-info row">
+        <div class="col-8 m-auto pt-3">
             <div class="page-header">
                 <h1 class="text-secondary">
                     <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</h1>
@@ -39,18 +39,18 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-2 bg-batkal">
-            <nav class="nav flex-column ">
+        <div class="col-md-2 bg-batkal">
+            <nav class="nav flex-column mr-4">
                 <a class="nav-link active" href="#">דף הבית</a>
                 <a class="nav-link" href="#">רשימת משווקים</a>
                 <a class="nav-link" href="#">צור קשר</a>
                 <button class="btn btn-light my-2 mx-auto" type="button">כניסת/הרשמת מתקינים</button>
             </nav>
         </div>
-        <div class="col-8" an-configure>
-            
+        <div class="col-8 " an-configure>
+
         </div>
-        <div class="col-2 bg-batkal-const">
+        <div class="col-md-2 bg-batkal-const">
             <nav class="nav flex-column">
                 <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
                 <a class="nav-link" href="#">הזמנות</a>
