--- a/app/contructors/configurator.html
+++ b/app/contructors/configurator.html
@@ -1,8 +1,8 @@
 <main ng-controller="confCtrl">
-    <form class="mt-4 mr-4">
+    <form class="mr-4 mt-4">
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="workOrderNum" class="h5">הזמנת עבודה</label>
+                <label for="workOrderNum" class="h5">הזמנת עבודה מס'</label>
                 <input type="text" class="form-control col-3" id="workOrderNum" placeholder="">
             </div>
         </div>
@@ -29,7 +29,7 @@
             <dir class="col-md-1"></dir>
             <div class="form-group col-md-5">
                 <label for="profileType" class="h5">מספר כנפיים</label>
-                <input type="number" class="form-control col-6" id="windowHeight" placeholder="מספר כנפיים">
+                <input type="number" class="form-control col-4" id="windowHeight" placeholder="מספר כנפיים">
             </div>
         </div>
         <div class="form-row">
@@ -38,9 +38,7 @@
                 <input type="number" class="form-control col-6" id="windowHeight" placeholder="" ng-model="numberOfFields" ng-change="changeFieldArray()">
             </div>
         </div>
-        <!-- <h1>{{fieldArray}}</h1> -->
         <div class="form-row mb-2" ng-repeat="x in fieldArray">
-            <!-- <div class="col-md-2"> -->
                 <label for="profileType{{$index}}" class="col-form-label h5">סוג מנוף {{$index+1}}</label>
                 <select id="profileType{{$index}}" class="form-control col-2">
                     <option>בחר</option>
@@ -48,7 +46,33 @@
                     <option>שמאל</option>
                     <option>דו צדדי</option>
                 </select>
-            <!-- </div> -->
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-5">
+                <label for="profileType" class="h5">צבע</label>
+                <select id="profileType" class="form-control">
+                    <option>בחר</option>
+                    <option>לבן</option>
+                    <option>אפור</option>
+                </select>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="form-group col-md-2">
+                <label for="profileType" class="h5">כולל הזזה?</label>
+                <select id="profileType" class="form-control">
+                    <option>כן</option>
+                    <option>לא</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-12">
+                <label for="remarks" class="h5">הערות</label>
+                <!-- <input type="textarea" rows="10" class="form-control col-8" id="remarks" placeholder="הערות מיוחדות"> -->
+                <textarea class="form-control  col-8" rows="6" id="remarks" placeholder="הערות מיוחדות"></textarea>
+                
+            </div>
+            
         </div>
         <button type="submit" class="btn btn-primary">חשב</button>
     </form>
