--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <script src="./app/shuttersApp.js"></script>
-    <script src="./app/Test/nowTestCtrl.js"></script>
-    <script src="./app/Test/nowTestSrv.js"></script>
     <script src="./app/contructors/confCtrl.js"></script>
-    <script src="./app/contructors/signUpDirective.js"></script>
     <script src="./app/contructors/configuratorDirective.js"></script>
+    <script src="./app/contructors/confSrv.js"></script>
+    <script src="./app/home/homeCtrl.js"></script>
+    <script src="./app/home/homeDirective.js"></script>
+    <script src="./app/contructors/signUpDirective.js"></script>
+    
+
+
+
+
     <link rel="stylesheet" type="text/css" media="screen" href="./app/style.css" />
 
 
 </head>
 
-<body ng-controller="nowTestCtrl">
+<body>
 
 
     <div class="border-bottom border-info row">
@@ -47,7 +53,7 @@
                 <button class="btn btn-light my-2 mx-auto" type="button">כניסת/הרשמת מתקינים</button>
             </nav>
         </div>
-        <div class="col-8 " an-configure>
+        <div class="col-8 " an-home>
 
         </div>
         <div class="col-md-2 bg-batkal-const">
