--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="./app/home/homeCtrl.js"></script>
     <script src="./app/home/homeDirective.js"></script>
     <script src="./app/contructors/signUpDirective.js"></script>
-    
+
 
 
 
@@ -37,27 +37,23 @@
 
 
     <div class="border-bottom border-info row">
+        <div class="col-3"></div>
         <div class="col-8 m-auto pt-3">
             <div class="page-header">
-                <h1 class="text-secondary">
-                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</h1>
+                <h2 class="text-secondary ml-auto">
+                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="ml-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</h2>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-2 bg-batkal">
-            <nav class="nav flex-column mr-4">
+    <div class="row mt-1">
+        <div class="col-md-3">
+            <nav class="nav flex-column bg-batkal mr-4">
                 <a class="nav-link active" href="#">דף הבית</a>
                 <a class="nav-link" href="#">רשימת משווקים</a>
                 <a class="nav-link" href="#">צור קשר</a>
-                <button class="btn btn-light my-2 mx-auto" type="button">כניסת/הרשמת מתקינים</button>
+                <a class="nav-link bg-batkal-const" href="#">כניסת/הרשמת מתקינים</a>
             </nav>
-        </div>
-        <div class="col-8 " an-home>
-
-        </div>
-        <div class="col-md-2 bg-batkal-const">
-            <nav class="nav flex-column">
+            <nav class="nav flex-column bg-batkal-const  mr-4">
                 <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
                 <a class="nav-link" href="#">הזמנות</a>
                 <a class="nav-link" href="#">עזרים ומחשבונים</a>
@@ -65,6 +61,10 @@
                 <a class="nav-link disabled" href="#">FAQ</a>
             </nav>
         </div>
+        <div class="col-md-9 " an-home>
+
+        </div>
+
     </div>
 
 
