--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
                 <a class="nav-link active" href="#">דף הבית</a>
                 <a class="nav-link" href="#">רשימת משווקים</a>
                 <a class="nav-link" href="#">צור קשר</a>
-                <a class="nav-link bg-batkal-const" href="#">כניסת/הרשמת מתקינים</a>
+                <a class="nav-link bg-batkal-const" href="/#!/signup">כניסת/הרשמת מתקינים</a>
             </nav>
             <nav class="nav flex-column bg-batkal-const  mr-4">
                 <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
-                <a class="nav-link" href="#">הזמנות</a>
-                <a class="nav-link" href="#">עזרים ומחשבונים</a>
-                <a class="nav-link disabled" href="#">פורום</a>
-                <a class="nav-link disabled" href="#">FAQ</a>
+                <a class="nav-link" href="">הזמנות</a>
+                <a class="nav-link" href="/#!/neworder">הזמנה חדשה</a>
+                <a class="nav-link" href="#">פורום</a>
+                <a class="nav-link" href="#">FAQ</a>
             </nav>
         </div>
-        <div class="col-md-9 " an-home>
-
+        <div class="col-md-9 ">
+                <ng-view></ng-view>
         </div>
 
     </div>
