--- a/app/contructors/configurator.html
+++ b/app/contructors/configurator.html
@@ -5,10 +5,18 @@
                 <label for="pNumber" class="h5">הזמנת עבודה מס'</label>
                 <input type="text" class="form-control col-3" id="pNumber" placeholder="" ng-model="pNumber">
             </div>
-            <button type="submit" class="btn btn-primary col-md-2">בדוק וצור<br> רשימת פריטים להזמנה</button>
+            <button type="submit" class="btn btn-primary col-md-2">בדוק וצור
+                <br> רשימת פריטים להזמנה</button>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-3">
+                <label for="pProfileType" class="h5">סוג תריס</label>
+                <select id="pProfileType" class="form-control col-11" ng-model="pProfileType">
+                    <option>פרופיל "בורג"</option>
+                    <option>9000</option>
+                </select>
+            </div>
+            <div class="form-group col-md-5">
                 <h5>גודל מפתח</h5>
                 <div class="row pr-3">
                     <label for="pHeight" class="col-form-label h6 pl-1">גובה(ס"מ)</label>
@@ -17,16 +25,16 @@
                     <input type="text" class="form-control col-2" id="pWidth" placeholder="רוחב" ng-model="pWidth">
                 </div>
             </div>
+
         </div>
         <div class="form-row mt-3">
-            <div class="form-group col-md-3">
+            <!-- <div class="form-group col-md-3">
                 <label for="pProfileType" class="h5">סוג תריס</label>
                 <select id="pProfileType" class="form-control col-11" ng-model="pProfileType">
-                    <option>בחר</option>
                     <option>פרופיל "בורג"</option>
                     <option>9000</option>
                 </select>
-            </div>
+            </div> -->
             <div class="form-group col-md-2">
                 <label for="pNoOfWings" class="h5">מספר כנפיים</label>
                 <input type="number" class="form-control col-10" id="pNoOfWings" value="1" min="1" max="8" ng-model="pNoOfWings">
@@ -38,10 +46,10 @@
             <div class="form-group col-md-3">
                 <label for="battery" class="h5">קיבולת סוללה</label>
                 <select id="battery" class="form-control " ng-model="battery">
-                    <option>10 AH</option>
-                    <option>13 AH</option>
-                    <option>16 AH</option>
-                    <option>20 AH</option>
+                    <option>AH 10</option>
+                    <option>AH 13</option>
+                    <option>AH 16</option>
+                    <option>AH 20</option>
                 </select>
             </div>
         </div>
@@ -53,9 +61,9 @@
         </div>
         <div class="form-row mb-2">
             <div class="col-md-2" ng-repeat="x in fieldArray">
-                <div class="row">
-                    <label for="profileType{{$index}}" class="col-form-label col-5 h5 pr-3">כיוון {{$index+1}}</label>
-                    <select id="profileType{{$index}}" class="form-control col-6 " ng-model="leverType[$index]">
+                <div class="row field">
+                    <label for="profileType{{$index}}" class="col-form-label col-4 h5 pr-3 pl-0">כיוון {{$index+1}}</label>
+                    <select id="profileType{{$index}}" class="form-control col-6 pl-5" ng-model="leverType[$index]">
                         <option>ימין</option>
                         <option>שמאל</option>
                         <option>דו צדדי</option>
@@ -90,7 +98,7 @@
                     <option>לא</option>
                 </select>
             </div>
-            
+
 
         </div>
         <div class="form-row">
