--- a/app/contructors/signUp.html
+++ b/app/contructors/signUp.html
@@ -1,15 +1,16 @@
-<main >
-        <form class="mt-4">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="inputEmail4">כתובת דוא"ל</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל'>
-                </div>
-                <div class="form-group col-md-6">
-                    <label for="inputPassword4">סיסמה</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
-                </div>
+<main>
+    <form class="mt-4 col-11">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputEmail4">כתובת דוא"ל</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder='כתובת דוא"ל'>
             </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword4">סיסמה</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
+            </div>
+        </div>
+        <div class="d-none">
             <div class="form-row">
                 <div class="form-group col-md-6">
 
@@ -62,7 +63,7 @@
                     <input type="text" class="form-control" id="inputZip">
                 </div>
             </div>
-
-            <button type="submit" class="btn btn-primary">הרשמה</button>
-        </form>
-    </main>
+        </div>
+        <button type="submit" class="btn btn-primary">הרשמה</button>
+    </form>
+</main>
