data structure through jsons

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,4 @@
-<main ng-controller="homeCtrl">
+<main>
     <div class="mt-4">
         <p class="text-center">
             <img src="./app/shared/images/homePage.png" alt="">
