--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </nav>
             <nav class="nav flex-column bg-batkal-const  mr-4">
                 <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
-                <a class="nav-link" href="">הזמנות</a>
+                <a class="nav-link" href="/#!/orderlist">הזמנות</a>
                 <a class="nav-link" href="/#!/neworder">הזמנה חדשה</a>
                 <a class="nav-link" href="#">פורום</a>
                 <a class="nav-link" href="#">FAQ</a>
