--- a/app/contructors/signUp.html
+++ b/app/contructors/signUp.html
@@ -10,7 +10,7 @@
                 <input type="password" class="form-control" id="inputPassword4" placeholder="סיסמה">
             </div>
         </div>
-        <div class="d-none">
+        <div class=""> <!--d-none-->
             <div class="form-row">
                 <div class="form-group col-md-6">
 
