--- a/app/contructors/configurator.html
+++ b/app/contructors/configurator.html
@@ -1,4 +1,4 @@
-<main ng-controller="confCtrl">
+<main >
     <form class="mr-4 mt-4">
         <div class="form-row">
             <div class="form-group col-md-9">
