--- a/app/contructors/ProposalList.html
+++ b/app/contructors/ProposalList.html
@@ -1,1 +1,30 @@
-<h1>hello</h1>
+<main>
+    <div class="mx-4 mt-3">
+<table class="table table-bordered table-hover">
+        <thead  >
+          <tr class="table-primary">
+            <th>מספר הצעה</th>
+            <th>תאריך</th>
+            <th>הערות</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="">
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+          </tr>
+          <tr>
+            <td>Mary</td>
+            <td>Moe</td>
+            <td>mary@example.com</td>
+          </tr>
+          <tr>
+            <td>July</td>
+            <td>Dooley</td>
+            <td>july@example.com</td>
+          </tr>
+        </tbody>
+      </table>      
+    </div>
+    </main>
