--- a/index.html
+++ b/index.html
@@ -18,15 +18,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <script src="./app/shuttersApp.js"></script>
     <script src="./app/contructors/confCtrl.js"></script>
-    <script src="./app/contructors/configuratorDirective.js"></script>
-    <script src="./app/contructors/confSrv.js"></script>
+    <script src="./app/contructors/ordersSrv.js"></script>
     <script src="./app/home/homeCtrl.js"></script>
-    <script src="./app/home/homeDirective.js"></script>
-    <script src="./app/contructors/signUpDirective.js"></script>
-
-
-
-
 
     <link rel="stylesheet" type="text/css" media="screen" href="./app/style.css" />
 
@@ -55,8 +48,8 @@
             </nav>
             <nav class="nav flex-column bg-batkal-const  mr-4">
                 <a class="nav-link active" href="#">להורדת קטלוג PDF</a>
-                <a class="nav-link" href="/#!/orderlist">הזמנות</a>
-                <a class="nav-link" href="/#!/neworder">הזמנה חדשה</a>
+                <a class="nav-link" href="/#!/orderlist">ההצעות שלי</a>
+                <a class="nav-link" href="/#!/neworder">הצעה חדשה</a>
                 <a class="nav-link" href="#">פורום</a>
                 <a class="nav-link" href="#">FAQ</a>
             </nav>
