--- a/app/contructors/ProposalList.html
+++ b/app/contructors/ProposalList.html
@@ -19,11 +19,15 @@
       </tbody>
     </table>
   </div>
+  
   <div class="mt-3 mr-4 mb-0">
-    <h5>פרטי הזמנה : {{currentOrder.oNumber.toUpperCase()}}</h5>
+    <div class="row">
+      <h5 class="col-md-4">מק"טים עבור הזמנה : {{currentOrder.oNumber.toUpperCase()}}</h5>
+      <!-- <button type="submit" class="btn btn-primary col-md-2 ml-3" ng-click="">רשימת פריטים</button> -->
+      <button type="submit" class="btn btn-primary col-md-2" ng-click="">צפה בנתוני ההזמנה</button>
+    </div>
   </div>
   <div class="mx-4 mt-5 mainTable">
-    <!-- <h1>{{orderList}}</h1> -->
     <table class="table table-bordered table-hover">
       <thead>
         <tr class="table-secondary">
