--- a/app/home/home.html
+++ b/app/home/home.html
@@ -3,7 +3,7 @@
         <p class="text-center">
             <img src="./app/shared/images/homePage.png" alt="">
         </p>
-        <ul class="h4 col-md-10 mx-auto">
+        <ul class="h4  mx-auto">
             <li>מוצרי
                 <span class="font-weight-bold font-italic h3">ביתקל</span> נותנים פתרונות הצללה המשלבים את תריסי הרפפה עם יתרונותיהם במערכת אוטומטית נשלטת מרחוק.</li>
             <li>יש לכם תריס רפפה פשוט? שדרגו בקלות לתריס חשמלי בלי לוותר על הנוחות, בלי חציבות, בלי ארגזי רוח בלי העברות קוי
