--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,7 +14,7 @@
             <li>בית "ירוק" יותר מתמיד. חיסכון בעלויות קירור, חימום, חשמל.</li>
         </ul>
     
-    <div id="carouselExampleIndicators" class="carousel slide col-md-7 mx-auto" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide col-lg-7 mx-auto" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
