--- a/app/contructors/newOrder.html
+++ b/app/contructors/newOrder.html
@@ -1,4 +1,4 @@
-<main class="formbg col-lg-11 m-auto">
+<main class="formbg col-lg-11 mx-auto mt-4">
     <form class="pr-4 pt-4">
         <div class="row no-gutters">
             <div class="form-group col-lg-9">
