--- a/app/contructors/orderList.html
+++ b/app/contructors/orderList.html
@@ -7,13 +7,15 @@
           <th>מספר הצעה</th>
           <th>תאריך</th>
           <th>הערות</th>
+          <th>cgkho</th>
         </tr>
       </thead>
       <tbody>
-        <tr class="" ng-repeat="x in orderList" ng-click="getOrderDetails(x)">
+        <tr class="" ng-repeat="x in orderList | filter: activeUser.cNumber" ng-click="getOrderDetails(x)">
           <td>{{x.oNumber.toUpperCase()}}</td>
           <td>{{x.oDateTime}}</td>
           <td>{{x.oRemarks}}</td>
+          <td>{{x.oOrderOwner}}</td>
         </tr>
 
       </tbody>
