--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 
     <script src="./app/contructors/orderCtrl.js"></script>
+    <script src="./app/contructors/newOrderCtrl.js"></script>
     <script src="./app/contructors/orderSrv.js"></script>
     <script src="./app/home/homeCtrl.js"></script>
 
@@ -39,9 +40,9 @@
     <div class="border-bottom border-info row no-gutters">
         <div class="col-lg-3"></div>
         <div class="col-lg-9 pt-3">
-            <div class="page-header">
-                <p class=" h4 text-secondary">
-                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="pl-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</p2>
+            <div class="page-header ">
+                <p class=" h4 text-secondary text-center">
+                    <img src="./app/shared/images/batkal.png" alt="BATKAL-IMG" class="pl-2">ביתקל בע"מ – הפיתרון החכם להצללה מיטבית</p>
             </div>
         </div>
     </div>
